# monocular-vo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sequences/hallway-5m_slam/: slam_positions.npy  vo_only_positions.npy
docs/: JETSON_PLAN.md
scripts/: export_depth_to_onnx.py  jetson_smoke_test.py  make_chessboard_pdf.py  make_demo.py  make_slam_comparison.py  run_calibration.py  run_capture.py  run_kitti.py  run_slam.py  run_tum.py  run_vo.py
src/monocular_vo/: calibrate.py  capture.py  depth.py  eval.py  keyframe.py  kitti.py  loop.py  slam.py  tum.py  visualize.py  vo.py
tests/: test_depth.py  test_eval.py  test_slam.py  test_tum.py  test_vo_synthetic.py
